--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -3,6 +3,12 @@
 
 name: storybook
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 on:
   push:
     branches: [ "master" ]
