--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "vue-echarts",
-  "private": true,
+  "name": "@ting-xing/vue-echarts",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "main": "./dist/vue-echarts.umd.cjs",
   "module": "./dist/vue-echarts.js",
   "types": "./dist/index.d.ts",
+  "repository": {
+    "type": "github",
+    "url": "https://github.com/ting-xing/vue-echarts"
+  },
   "exports": {
     ".": {
       "import": "./dist/vue-echarts.js",
