--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -6,7 +6,9 @@ name: publish github packages
 on:
   release:
     types: [created]
-
+  push:
+    tags:
+      - v**
 jobs:
   publish-gpr:
     runs-on: ubuntu-latest
