--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "storybook": "^8.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "vite": "5.2.6",
     "vite-plugin-dts": "^3.7.3",
     "vue-tsc": "^1.8.5"
   },
